--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -1,1 +1,16 @@
+@import 'base/0-fonts'
+
 @import '../_css/bootstrap.min.css'
+
+@import 'base/1-base'
+
+@import 'base/2-header'
+@import 'main/1-main'
+@import 'main/2-video'
+@import 'main/3-for'
+@import 'main/4-benefits'
+@import 'main/5-author'
+@import 'main/6-revs'
+@import 'base/3-footer'
+@import 'main/7-modal'
+@import 'main/8-medias'
