Main page is typese

--- a/_app/styl/base/1-base.styl
+++ b/_app/styl/base/1-base.styl
@@ -96,7 +96,7 @@ footer
 		text-decoration none
 		color #000
 		background-color: #60f2e5
-	&-mail
+	&-form
 		background-color: #60f2e5
 		color #000
 		&:focus
