--- a/_app/index.pug
+++ b/_app/index.pug
@@ -1,5 +1,5 @@
 -var path = '';
--var head_url = '';
+-var head_url = 'https://bulenkov.mycapitalland.ru/';
 -var head_title = 'Научим создавать, сохранять и приумножать свои сбережения';
 -var head_description = 'Получи инструменты к финансовой безопасности';
 //- -var head_img = 'img/banner.jpg';
@@ -37,6 +37,5 @@ html(lang="ru")
 		include pug/base/2-footer
 		include pug/main/7-modal
 		include pug/base/3-scripts
-		//- include pug/scripts
 		//- include pug/scripts/chat
 		include pug/scripts/body_bottom_scripts
