Main page is stylezed

--- a/_app/pug/main/3-for.pug
+++ b/_app/pug/main/3-for.pug
@@ -1,7 +1,7 @@
 mixin for(cl,h4,p)
 	.col-md-4
 		.for-item(class=cl)
-			h4.for-item=h4
+			h4.for-item-title=h4
 			p.for-item-text=p
 
 section#for
