--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -1,41 +1,46 @@
 section#main
+	.main-wrapper
+		.container
+			include ../base/1-header
+			.row
+				.col-md-7
+					h1.main-title
+						small Онлайн-мастер-класс
+						| Научим создавать, сохранять и приумножать свои сбережения
+					h2.main-subtitle Получи инструменты к финансовой безопасности
+					.main-info
+						p Даты проведения: 
+							span с 1 по 3 августа, 19:00(мск)
+						p Автор: 
+							span Николай Буленков
+				.col-md-5
+					.main-img
+						img(src=path+"img/images/nikolay-main.png" alt="Николай Буленков")
+						.main-about
+							p
+								span Буленков Николай Владимирович
+								| Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group
 	.container
-		include ../base/1-header
-		.row
-			.col-md-7
-				p.pre Онлайн-мастер-класс
-				h1.main-title Научим создавать, сохранять и приумножать свои сбережения
-				h2.main-subtitle Получи инструменты к финансовой безопасности
-				.main-info
-					p Даты проведения: 
-						span с 1 по 3 августа, 19:00(мск)
-					p Автор: 
-						span Николай Буленков
-			.col-md-5
-				.main-img
-					img(src=path+"img/images/nikolay-main.png" alt="Николай Буленков")
-					.main-about
-						p
-							span Буленков Николай Владимирович
-							| Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group
 		.main-form-wrapper
-			h3.form-title Запишитесь прямо сейчас!
 			form(action=action+group method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" ).form.form-main
-			.email-block.email-block-form
-				input( type="hidden" value="1" name="required_fields[email]")
-				input(class="input input-mail input-mail-main" name="Contact[email]" type="text" placeholder="Ваш email")
-			button(type="submit").button.button-form.button-form-main Записаться
-			.clearfix
-			p.alert-message
-			.checking
-				input(type="checkbox" id="check-1" checked).check
-				label(for="check-1").check-label Я согласен с 
-					a(href="https://mycapitalland.ru/politics.pdf" target="_blank") условиями обработки
-					|  персональных данных по 152 - Ф3
-			div(style="display: none;")
-				#formTypeSpecificVars-1(style="display: none;")
-					input(type="hidden" value=group id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]")
-				<!-- API код канала рекламы -->
-				input(type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]")
-				input(type="hidden" name="formId" value=formId)
-				input(type="hidden" name="formVc" value=formVc)
+				h3.form-title.form-title-main Запишитесь прямо сейчас!
+				.form-container
+					.email-block.email-block-form
+						input( type="hidden" value="1" name="required_fields[email]")
+						input(class="input input-mail input-mail-main" name="Contact[email]" type="text" placeholder="Ваш email")
+					button(type="submit").button.button-form.button-form-main Записаться
+					.clearfix
+					p.alert-message
+					.checking
+						input(type="checkbox" id="check-1" checked).check
+						label(for="check-1").check-label Я согласен с 
+							a(href="https://mycapitalland.ru/politics.pdf" target="_blank") условиями обработки
+							|  персональных данных по 152 - Ф3
+					div(style="display: none;")
+						#formTypeSpecificVars-1(style="display: none;")
+							input(type="hidden" value=group id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]")
+						<!-- API код канала рекламы -->
+						input(type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]")
+						input(type="hidden" name="formId" value=formId)
+						input(type="hidden" name="formVc" value=formVc)
+				.clearfix
