--- a/_app/pug/main/4-benefits.pug
+++ b/_app/pug/main/4-benefits.pug
@@ -4,8 +4,8 @@ mixin ben(cl,p)
 
 
 section#benefits
-	.container
-		.benefits-1
+	.benefits-1
+		.container
 			+gt('general-title-center','Выгоды от посещения МК')
 			.row
 				.col-md-4
@@ -19,11 +19,12 @@ section#benefits
 			.row
 				.col-md-4.col-md-offset-4
 					+ben('benefit-5','Выяснишь 7 привычек успешных людей и как их внедрить в свою жизнь')
-		.benefits-2
+	.benefits-2
+		.container
 			.row
 				.col-md-6
 					.benefit-more
-						img(src=path+"img/icons/", alt="Что будет на МК").benefits-more-img
+						img(src=path+"img/icons/benefit-1.png", alt="Что будет на МК").benefit-more-img
 						+gt('general-title-benefit-more','Что будет на МК')
 						ul.benefit-more-list
 							li - Разберем пошаговый план, как перейти с активного на пассивный доход без финансовых рисков для себя
@@ -35,7 +36,7 @@ section#benefits
 							li - Узнаешь технологии и принципы накопления, которые давно искал
 				.col-md-6
 					.benefit-more
-						img(src=path+"img/icons/", alt="Эффект от МК").benefits-more-img
+						img(src=path+"img/icons/benefit-2.png", alt="Эффект от МК").benefit-more-img
 						+gt('general-title-benefit-more','Эффект от МК')
 						ul.benefit-more-list
 							li - Появятся полноценные выходные. Да, такое возможно!
