--- a/_app/pug/main/5-author.pug
+++ b/_app/pug/main/5-author.pug
@@ -1,40 +1,37 @@
 section#author
 	.container
-		.author-wrapper
-			.row
-				.col-md-8
-					h4.author-title Об авторе
-						small Буленков Николай Владимирович, 37 лет
-					ul.author-list
-						li
-							span Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group
-						li Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров
-						li За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала
-						li
-							span 2017 - 2019 гг.
-						li Директор по продажам Like Центра Аяза Шабутдинова
-						li Выручка департамента продаж Москвы
-						li 2017 г. - 14 млн руб/мес
-						li 2018 г. - 50 млн руб/мес
-				.col-md-4
-					.author-img
-						img(src=path+"img/images/nikolay.png", alt="Николай Буленков")
+		.author
+			h4.author-title Об авторе
+				small Буленков Николай Владимирович, 37 лет
+			ul.author-list
+				li
+					span Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group
+				li Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров
+				li За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала
+				li
+					span 2017 - 2019 гг.
+				li Директор по продажам Like Центра Аяза Шабутдинова
+				li Выручка департамента продаж Москвы
+				li 2017 г. - 14 млн руб/мес
+				li 2018 г. - 50 млн руб/мес
+			.author-img
+				img(src=path+"img/images/nikolay.png", alt="Николай Буленков")
 		.row
 			.col-md-6
-				.author-about
-					p.author-about
+				.author-about.author-about-1
+					p.author-about-text
 						span Награды:
 					ul.author-about-list
 						li - Лучший сотрудник года - Агентство Недвижимости ЮСИН
 						li - Сертификат: Серебряный риэлтор
 						li - Создатель самого полезного обучающего продукта на рынке (Международная Ассоциация Успешных Агентов)
-				.author-about
-					p.author-text 
+				.author-about.author-about-2
+					p.author-about-text 
 						span Сертификат от Международной Ассоциации Агентов 
 						| по недвижимости за создание самого эффективного обучающего продукта на рынке обучения персонала в сфере недвижимости "Симулятор сделки"
-					p.author-text Образование: МГТУ им. Н.Э. Баумана, высший балл
+					p.author-about-text Образование: МГТУ им. Н.Э. Баумана, высший балл
 			.col-md-6
-				.author-about
-					p.author-text Онлайн обучение финансовой грамотности на практике.
-					p.author-text C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам
-					p.author-text Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"
+				.author-about.author-about-3
+					p.author-about-text Онлайн обучение финансовой грамотности на практике.
+					p.author-about-text C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам
+					p.author-about-text Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"
