--- a/_app/styl/main/7-modal.styl
+++ b/_app/styl/main/7-modal.styl
@@ -1,63 +1,79 @@
-// .modal
-	// display none
-	// cursor auto !important
-	// background-image url(../img/icons/waves.png)
-	// background-repeat no-repeat
-	// background-position: bottom -120px right -100px
-.white-popup {
+.mfp-fade.mfp-bg.mfp-ready
+	background-color: #fff
+	opacity .95 !important
+.white-popup
 	position: relative;
 	background: #FFF;
 	padding: 20px;
 	width: auto;
 	max-width: 500px;
 	margin: 20px auto;
-	background-image url(../img/icons/waves.png)
+	background-image url(../img/backs/modal.png)
 	background-repeat no-repeat
-	background-position: bottom -120px right -100px
-}
+	background-position: center
+	background-size: cover
+	border-radius: 7px
+	box-shadow: 0px 0px 33.44px 4.56px rgba(45, 45, 47, 0.15);
 .form-title-modal
+	width 100%
 	text-align center
+	margin-bottom: 30px
 .input-mail-modal
 	float: none
 	display block
 	margin 0 auto 10px
+	width 100%
+	max-width 290px
 .button-form-modal
 	float: none
 	display block
 	margin 0 auto
 	width 100%
 	max-width 290px
-.checking-modal .check-label
-	line-height: 18px
-.mfp-fade.mfp-bg {
+.checking-modal
+	max-width 300px
+	.check-label
+		line-height: 18px
+.mfp-fade.mfp-bg
 	opacity: 0;
-
 	-webkit-transition: all 0.15s ease-out;
 	-moz-transition: all 0.15s ease-out;
 	transition: all 0.15s ease-out;
-}
+
 /* overlay animate in */
-.mfp-fade.mfp-bg.mfp-ready {
+.mfp-fade.mfp-bg.mfp-ready
 	opacity: 0.8;
-}
+
 /* overlay animate out */
-.mfp-fade.mfp-bg.mfp-removing {
+.mfp-fade.mfp-bg.mfp-removing
 	opacity: 0;
-}
+
 
 /* content at start */
-.mfp-fade.mfp-wrap .mfp-content {
+.mfp-fade.mfp-wrap .mfp-content
 	opacity: 0;
-
 	-webkit-transition: all 0.15s ease-out;
 	-moz-transition: all 0.15s ease-out;
 	transition: all 0.15s ease-out;
-}
+
 /* content animate it */
-.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content
 	opacity: 1;
-}
+
 /* content animate out */
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content
 	opacity: 0;
-}
+.mfp-close-btn-in .mfp-close
+	color #206e9a
+	width 44px
+	height 44px
+	line-height: 44px
+	top - 15px
+	right -40px
+	font-size: 44px
+	font-family: R
+	font-weight: normal
+	opacity 1
+	transition: all .3s ease
+	&:hover
+		transform: rotate(45deg)
