Thanks page is typeseted and stylezed

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -33,7 +33,7 @@ html(lang="ru")
 		include pug/main/3-for
 		include pug/main/4-benefits
 		include pug/main/5-author
-		include pug/main/6-revs
+		//- include pug/main/6-revs
 		include pug/base/2-footer
 		include pug/main/7-modal
 		include pug/base/3-scripts
