--- a/_app/pug/main/2-video.pug
+++ b/_app/pug/main/2-video.pug
@@ -4,9 +4,25 @@ section#video
 			.col-md-6
 				.laptop-wrapper.laptop-wrapper-video
 					.video-wrapper
-						iframe(src="https://youtube.com/embed/?modestbranding=1&autoplay=1&mute=1" allowfullscreen)
+						iframe(src="https://youtube.com/embed/aZnnJ5ALCGo?modestbranding=1&autoplay=1&mute=1" allowfullscreen)
 			.col-md-6
-				+gt('','Посмотрите наше видео')
-				p.video-text «Если спросить любого человека, какие он знает способы приумножения сбережений, то, скорее всего, он вспомнит про банковские вклады и, возможно, но не факт, про фондовые биржи с ценными бумагами и валютой. А если ещё уточнить его отношение к этим вариантам инвестиций, то он, с вероятностью 99%, ответит, что вклады – это невыгодно, так как процентная ставка не покрывает уровень инфляции. А про то, чтобы вложить деньги в фондовую биржу, речи быть не может, так как это большой риск. При этом понятие «ПИФ», вообще, покажется просто инопланетным словом
-				p.video-text Почему так?
-				p.video-text Всё просто: 90% населения, как это ни ужасно, страдает от финансовой безграмотности. Люди мучаются из-за, порой, кабальной зависимости от зарплаты и при этом не хотят/боятся/не знают, как обрести более стабильные и достойные источники дохода
+				+gt('','Путь успеха: от бедного механика – до миллионера')
+				p.video-text
+					span 2003 год. 
+					| Институт. Я «заболел» автогонками, участвовал в соревнованиях и даже работал механиком на чемпионате по ралли.
+				p.video-text
+					span 2006 год. 
+					| Женился и понял, что на зарплату механика не проживёшь и вместе с другом открыл службу эвакуации с 2-мя эвакуаторами и раскрученным сайтом. Чуть позже мы открыли макетную мастерскую с невиданными тогда 3D-принтерами. Дело пошло, и первый бизнес мы продали.
+				p.video-text
+					span 2009 год. 
+					| Мировой кризис. Бизнес рухнул. Рождение сына вдохновляло меня. Я пошёл в торговлю, устроился менеджером по продаже автомобилей и начал зарабатывать столько же, сколько и во времена бизнеса – в среднем, 150 тысяч руб. в месяц.
+				p.video-text
+					span 2010-2019 годы. 
+					| Я пробовал разные способы заработка – открывал бизнес, был риэлтором, бизнес-тренером, топ-менеджером, но «пробить планку» в 200 тыс. руб. в месяц не мог. Некоторое время я жил на полмиллиона в месяц. Доход мечты особо не изменил мою жизнь, а когда он снизился, я столкнулся с личным кризисом – я стал тратить больше, чем зарабатываю. И когда я залез в долги, то понял, что неправильно распоряжаюсь деньгами, и финансовый успех не значит много зарабатывать.
+				p.video-text Из книг по финансовой грамотности я знал, что нужно потратить несколько лет на создание капитала, управляя имеющимися доходами, а потом перейти на пассивную прибыль. Это выгоднее сценария, в котором нужно постоянно и с каждым годом всё больше работать, чтобы жить по-человечески, а в старости рассчитывать лишь на пенсию и детей.
+				p.video-text
+					span 2019 год. 
+					| Стал миллионером всего за год и впервые за трудовую деятельность обрёл капитал, избавившись от проблемы нехватки денег. Чтобы достичь этого, я подробно изучил на практике финансовую грамотность, бухгалтерию, финучёт. И создал практический курс по финансам – коучинг-марафон «1 час в будущее».
+				p.video-text
+					span 2020 год. 
+					| Я – успешный тренер по личным финансам. Я с ужасом и жалостью наблюдаю за людьми, которые вынуждены добывать деньги ценой своего здоровья. Я обучаю всех желающих тому, как за 5-7 лет обрести финансовую независимость.
