--- a/_app/pug/main/3-for.pug
+++ b/_app/pug/main/3-for.pug
@@ -6,7 +6,7 @@ mixin for(cl,h4,p)
 
 section#for
 	.container
-		+gt('general-title-center','Для кого этот мастер-класс')
+		+gt('general-title-center','Этот мастер-класс будет полезен тем, кто:')
 		.row
 			+for('for-item-1','1','Хочет разобраться, как создавать и увеличивать личный капитал')
 			+for('for-item-2','2','Понимает, что пенсия - не вариант, надо крутиться самостоятельно')
