--- a/_app/pug/main/4-benefits.pug
+++ b/_app/pug/main/4-benefits.pug
@@ -6,13 +6,13 @@ mixin ben(cl,p)
 section#benefits
 	.benefits-1
 		.container
-			+gt('general-title-center','Выгоды от посещения МК')
+			+gt('general-title-center','Выгоды от посещения мастер-класса')
 			.row
 				.col-md-4
 					+ben('benefit-1','Узнаешь 4 навыка работы с деньгами, о которых знают все миллионеры')
 					+ben('benefit-2','Познакомишься с людьми, которые так же, как и ты хочет больше финансовой свободы')
 				.col-md-4
-					img.benefits-img(src=path+"img/images/benefits.png", alt="Выгоды от посещения МК")
+					img.benefits-img(src=path+"img/images/benefits.png", alt="Выгоды от посещения мастер-класса")
 				.col-md-4
 					+ben('benefit-3','Поймешь, как посчитать чистую доходность от вложенных денег. И почему, чем больше капитал, тем доходность выше')
 					+ben('benefit-4','Узнаешь, как управлять расходами через подсознание, повышая качество своей жизни, а не отказываясь от необходимых вещей')
@@ -24,8 +24,8 @@ section#benefits
 			.row
 				.col-md-6
 					.benefit-more
-						img(src=path+"img/icons/benefit-1.png", alt="Что будет на МК").benefit-more-img
-						+gt('general-title-benefit-more','Что будет на МК')
+						img(src=path+"img/icons/benefit-1.png", alt="Что будет на мастер-классе").benefit-more-img
+						+gt('general-title-benefit-more','Что будет на мастер-классе')
 						ul.benefit-more-list
 							li - Разберем пошаговый план, как перейти с активного на пассивный доход без финансовых рисков для себя
 							li - Определишь, какой капитал тебе необходим для финансовой свободы
@@ -36,8 +36,8 @@ section#benefits
 							li - Узнаешь технологии и принципы накопления, которые давно искал
 				.col-md-6
 					.benefit-more
-						img(src=path+"img/icons/benefit-2.png", alt="Эффект от МК").benefit-more-img
-						+gt('general-title-benefit-more','Эффект от МК')
+						img(src=path+"img/icons/benefit-2.png", alt="Эффект от мастер-класса").benefit-more-img
+						+gt('general-title-benefit-more','Эффект от мастер-класса')
 						ul.benefit-more-list
 							li - Появятся полноценные выходные. Да, такое возможно!
 							li - Научишься грамотно управлять своими денежными активами по всем направлениям – от покупок до открытия бизнеса
