--- a/_app/pug/main/5-author.pug
+++ b/_app/pug/main/5-author.pug
@@ -4,16 +4,10 @@ section#author
 			h4.author-title Об авторе
 				small Буленков Николай Владимирович, 37 лет
 			ul.author-list
-				li
-					span Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group
-				li Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров
-				li За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала
-				li
-					span 2017 - 2019 гг.
-				li Директор по продажам Like Центра Аяза Шабутдинова
-				li Выручка департамента продаж Москвы
-				li 2017 г. - 14 млн руб/мес
-				li 2018 г. - 50 млн руб/мес
+				li Бизнесмен, инвестор
+				li Член Клуба Миллионеров
+				li Тренер по личным финансам
+				li Руководитель Обучающего цифрового агентства недвижимости «33 слона» в составе Холдинга MailRu Group
 			.author-img
 				img(src=path+"img/images/nikolay.png", alt="Николай Буленков")
 		.row
@@ -22,9 +16,9 @@ section#author
 					p.author-about-text
 						span Награды:
 					ul.author-about-list
-						li - Лучший сотрудник года - Агентство Недвижимости ЮСИН
-						li - Сертификат: Серебряный риэлтор
-						li - Создатель самого полезного обучающего продукта на рынке (Международная Ассоциация Успешных Агентов)
+						li - Лучший сотрудник года (Агентство недвижимости «ЮСИН»)
+						li - Сертификат «Серебряный риэлтор»
+						li - Сертификат Международной Ассоциации Успешных Агентов за создание полезного обучающего продукта
 				.author-about.author-about-2
 					p.author-about-text 
 						span Сертификат от Международной Ассоциации Агентов 
@@ -32,6 +26,8 @@ section#author
 					p.author-about-text Образование: МГТУ им. Н.Э. Баумана, высший балл
 			.col-md-6
 				.author-about.author-about-3
-					p.author-about-text Онлайн обучение финансовой грамотности на практике.
-					p.author-about-text C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам
-					p.author-about-text Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"
+					p.author-about-text Имеет обширный опыт работы в сфере продаж (тренер по продажам, РОП, директор по продажам)
+					p.author-about-text За 3 года в должности директора по продажам Like Центра Аяза Шабутдинова увеличил выручку московского департамента с 14 до 50 млн. рублей в месяц
+					p.author-about-text Его методика помогла более 2500 соискателям узнать, как увеличить доход
+					p.author-about-text Создатель самого эффективного обучающего продукта для персонала в сфере недвижимости «Симулятор сделки»
+					p.author-about-text В 2019 году нанял и обучил 897 менеджеров по продажам в сфере недвижимости по собственной технологии потокового найма персонала
