--- a/_app/styl/base/1-base.styl
+++ b/_app/styl/base/1-base.styl
@@ -89,6 +89,8 @@ footer
 	padding 18px 10px
 	background-color: #274888
 	transition: all .3s ease
+	position relative
+	z-index 90
 	&:focus
 		text-decoration none
 		color #fff
@@ -109,5 +111,7 @@ footer
 	font-family: Gd
 	font-weight: bold
 	margin-bottom: 50px
+	position relative
+	z-index 50
 	&-center
 		text-align center
