--- a/_app/styl/main/3-for.styl
+++ b/_app/styl/main/3-for.styl
@@ -4,6 +4,7 @@
 	background-image url('../img/backs/for.png')
 	background-repeat no-repeat
 	background-position: center
+	background-size: cover
 	position relative
 	z-index: 28
 .for-item
