--- a/_app/styl/main/2-video.styl
+++ b/_app/styl/main/2-video.styl
@@ -2,7 +2,13 @@
 	padding 170px 0 90px
 	background-color: #f0f0f0
 .laptop-wrapper-video
-	margin-top: 80px
+	margin-top: 20px
 .video-text
-	&:nth-child(3)
-		margin 30px 0
+	margin-bottom: 20px
+	span
+		font-family: Gd
+		font-weight: bold
+	&:last-child
+		margin-bottom: 0
+	// &:nth-child(3)
+	// 	margin 30px 0
