--- a/_app/styl/main/5-author.styl
+++ b/_app/styl/main/5-author.styl
@@ -1,12 +1,12 @@
 #author
-	padding 90px 0
+	padding 160px 0 90px
 	position relative
 	z-index 50
 .author
 	background-color: #f0f0f0
 	padding 50px 500px 50px 30px
 	position relative
-	margin-bottom: 50px
+	margin-bottom: 150px
 	&-title
 		font-size: 30px
 		font-family: Gd
@@ -27,7 +27,7 @@
 	&-img
 		position absolute
 		right: 0
-		bottom: -10px
+		bottom: -100px
 		width 100%
 		max-width 490px
 		display block
@@ -37,8 +37,11 @@
 		box-shadow: 0px 0px 33.44px 4.56px rgba(45, 45, 47, 0.15);
 		padding 20px 30px
 		&-1
-			margin 35px 0
+			margin 0 0 28px
 		&-text
+			margin-bottom: 10px
+			&:last-child
+				margin-bottom: 0
 			span
 				font-family: Gd
 				font-weight: bold
