Main page and Thank page are adapted

--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -31,7 +31,7 @@ section#main
 					button(type="submit").button.button-form.button-form-main Записаться
 					.clearfix
 					p.alert-message
-					.checking
+					.checking.checking-main
 						input(type="checkbox" id="check-1" checked).check
 						label(for="check-1").check-label Я согласен с 
 							a(href="https://mycapitalland.ru/politics.pdf" target="_blank" download) условиями обработки
