--- a/_app/pug/main/3-for.pug
+++ b/_app/pug/main/3-for.pug
@@ -6,12 +6,12 @@ mixin for(cl,h4,p)
 
 section#for
 	.container
-		+gt('general-title-center','Этот мастер-класс будет полезен тем, кто:')
+		+gt('general-title-center general-title-for','Этот мастер-класс будет полезен тем, кто:')
 		.row
 			+for('for-item-1','1','Хочет разобраться, как создавать и увеличивать личный капитал')
 			+for('for-item-2','2','Понимает, что пенсия - не вариант, надо крутиться самостоятельно')
 			+for('for-item-3','3','Не хочет открывать свой бизнес, брать кредиты и сжигать мосты')
 		.row
 			+for('for-item-4','4','Планирует выйти на пассивный доход в течение 5-10 лет')
-			+for('for-item-5','5','Хочет научится грамотно управлять своими активами')
+			+for('for-item-5','5','Хочет научиться грамотно управлять своими активами')
 			+for('for-item-6','6','Ставит перед собой амбициозные цели и достигает их')
