--- a/_app/pug/main/4-benefits.pug
+++ b/_app/pug/main/4-benefits.pug
@@ -6,11 +6,11 @@ mixin ben(cl,p)
 section#benefits
 	.benefits-1
 		.container
-			+gt('general-title-center','Выгоды от посещения мастер-класса')
+			+gt('general-title-center general-title-benefits','Выгоды от посещения мастер-класса')
 			.row
 				.col-md-4
 					+ben('benefit-1','Узнаешь 4 навыка работы с деньгами, о которых знают все миллионеры')
-					+ben('benefit-2','Познакомишься с людьми, которые так же, как и ты хочет больше финансовой свободы')
+					+ben('benefit-2','Познакомишься с людьми, которые так же, как и ты хотят больше финансовой свободы')
 				.col-md-4
 					img.benefits-img(src=path+"img/images/benefits.png", alt="Выгоды от посещения мастер-класса")
 				.col-md-4
@@ -18,7 +18,7 @@ section#benefits
 					+ben('benefit-4','Узнаешь, как управлять расходами через подсознание, повышая качество своей жизни, а не отказываясь от необходимых вещей')
 			.row
 				.col-md-4.col-md-offset-4
-					+ben('benefit-5','Выяснишь 7 привычек успешных людей и как их внедрить в свою жизнь')
+					+ben('benefit-5','Выяснишь 7 привычек успешных людей, и как их внедрить в свою жизнь')
 	.benefits-2
 		.container
 			.row
