--- a/_app/styl/main/4-benefits.styl
+++ b/_app/styl/main/4-benefits.styl
@@ -7,16 +7,17 @@
 		content: ''
 		display block
 		position absolute
-		top 0
+		top -30%
 		left 0
 		right 0
 		bottom: 0
-		height 120%
+		height 140%
 		width 100%
-		background-image url(../img/backs/benefits-1.png)
-		background-repeat no-repeat
-		background-position: center
-		background-size: cover
+		background-image: linear-gradient(to bottom, transparent 0%, #E8E8E8 80%, transparent)
+		// background-image url(../img/backs/benefits-1.png)
+		// background-repeat no-repeat
+		// background-position: center
+		// background-size: cover
 		z-index 0
 .benefit
 	padding 40px 40px 40px 70px
