--- a/_app/styl/main/2-video.styl
+++ b/_app/styl/main/2-video.styl
@@ -3,6 +3,10 @@
 	background-color: #f0f0f0
 .laptop-wrapper-video
 	margin-top: 20px
+	width 100%
+	max-width 555px
+	margin 20px 25px 90px 0
+	float left
 .video-text
 	margin-bottom: 20px
 	span
