--- a/_app/styl/main/3-for.styl
+++ b/_app/styl/main/3-for.styl
@@ -3,7 +3,7 @@
 	background-color: #F5F4F4
 	background-image url('../img/backs/for.png')
 	background-repeat no-repeat
-	background-position: center
+	background-position: center bottom
 	background-size: cover
 	position relative
 	z-index: 28
