--- a/_app/styl/main/8-medias.styl
+++ b/_app/styl/main/8-medias.styl
@@ -5,3 +5,276 @@
 		width 1400px
 	.main-title small
 		right -40px
+	.form-container
+		max-width 630px
+	.benefit
+		max-width none
+	.author-about-1
+		margin 0 0 59px
+@media screen and (max-width 1199px)
+	.main-wrapper
+		padding 0 0 120px
+	.form-main
+		padding 20px 60px
+	.main-img img
+		width 800px
+		left -160px
+		bottom: -150px
+	.main-about
+		width 100%
+		left 10px
+		bottom: 50px
+	#video
+		padding 115px 0 60px
+	.laptop-wrapper-video
+		max-width 530px
+	#for
+		padding 60px 0 40px
+	.benefits-img
+		width 100%
+		position: static
+		margin-top: 100px
+	.benefit-more
+		min-height 696px
+	#author
+		padding 160px 0 60px
+	.author-about-1
+		margin 0 0 4px
+@media screen and (max-width 991px)
+	.main-title small
+		left 0
+		right auto
+	.main-img
+		padding 0
+		left -30px
+		img
+			position: static
+			display block
+			margin 30px auto 0
+	.main-about
+		width 450px
+		left 0
+		right 0
+		margin 0 auto
+		bottom: 100px
+	.form-main
+		padding 20px 30px
+	.form-title-main
+		text-align center
+		margin 0 0 20px
+		float: none
+		width 100%
+	.form-container
+		float: none
+		margin 0 auto
+	.laptop-wrapper-video
+		max-width 650px
+		margin 0 auto 90px
+		float: none
+	.benefits-img
+		display none
+	.benefit-5
+		margin-top: 0
+	.benefit-more
+		margin-top: 170px
+		min-height 1px
+	.benefits-2
+		padding-top: 60px
+	.author
+		padding 220px 20px 20px
+		margin-bottom: 20px
+	.author-img
+		top -150px
+		left 30px
+		right 0
+		margin 0
+		height 350px
+		img
+			display block
+			width auto
+			height 100%
+	.author-about
+		margin-bottom: 20px
+@media screen and (max-width 767px)
+	#main
+		text-align center
+		padding 0 0 40px
+		min-height calc(100vh - 206px)
+	header
+		margin-bottom: 15px
+	.header-logo
+		float: none
+		display block
+		margin 0 auto 5px
+	.contacts
+		float: none
+		padding 0
+		text-align center
+	.contact
+		display inline-block
+		text-align: left
+	.main-title
+		font-size: 30px
+		small
+			left 0
+			right 0
+			margin 0 auto
+			width 238px
+	.input-mail-main
+		float: none
+		display block
+		margin 0 auto 10px
+		width 100%
+		max-width 270px
+	.button-form-main
+		float: none
+		display block
+		margin 0 auto
+		max-width 270px
+	.checking-main
+		max-width 270px
+		margin 5px auto 0
+		.check-label
+			line-height: 18px
+	.main-about
+		bottom: 150px
+		position relative
+	.main-img
+		left 0
+		img
+			width 100%
+			max-width 800px
+	footer
+		padding 40px 0 30px
+	.contact-footer
+		display block
+		width 100%
+		max-width 260px
+		margin 0 auto 10px
+@media screen and (max-width 560px)
+	.header-logo
+		width 100px
+	.contact
+		font-size: 12px
+		span
+			font-size: 10px
+	.contact-adress span:last-of-type
+		font-size: 12px
+	.main-title
+		font-size: 26px
+		line-height: 1.1
+	.main-subtitle
+		font-size: 20px
+		margin 20px 0
+	.main-info
+		padding 30px 15px 15px
+		margin-top: 30px
+		&:before
+			top -25px
+			left 0
+			right 0
+			margin 0 auto
+	.main-about
+		width 90%
+		bottom: 0
+	.form-main
+		bottom: -190px
+	#video
+		padding 190px 0 40px
+	.form-title
+		font-size: 22px
+	.general-title
+		font-size: 26px
+		line-height: 1.2
+		margin-bottom: 30px
+	.video-text
+		margin-bottom: 10px
+	#for
+		padding 40px 0
+	.for-item
+		height auto
+		padding 40px 20px
+	.mfp-close-btn-in .mfp-close
+		top 0
+		right 0
+		color #fff
+	#author
+		padding 160px 0 40px
+	.author-img
+		max-width none
+	.author-img
+		width auto
+	footer
+		padding 20px 0
+	.contact-footer
+		max-width none
+@media screen and (max-width 390px)
+	.contact
+		display block
+		width 100%
+		max-width 150px
+		margin 0 auto 5px
+	.main-title
+		font-size: 22px
+	.main-subtitle
+		font-size: 18px
+	.main-about
+		padding 20px 30px
+	.form-main
+		bottom: -235px
+		padding 20px
+	.form-title
+		font-size: 20px
+	#video
+		padding 230px 0 40px
+	.laptop-wrapper-video
+		margin-bottom: 60px
+	.general-title
+		font-size: 22px
+		margin-bottom: 25px
+	.general-title-for
+		margin-bottom: 60px
+	.for-item-text
+		font-size: 18px
+	#for
+		padding 40px 0 0
+	.general-title-benefits
+		margin-bottom: 50px
+	.benefit
+		padding 40px 20px 20px
+	.benefit-more-img
+		max-width none
+		width 220px
+	.benefit-more
+		padding 80px 20px 20px
+	.benefits-2
+		padding-top: 0
+	.author-img
+		left 0
+		right 0
+		margin 0 auto
+		height auto
+		img
+			margin 0 auto
+			width 220px
+			height auto
+	.author
+		padding 150px 20px 20px
+	.author-title
+		font-size: 22px
+		small
+			font-size: 16px
+			margin: 5px 0 15px
+	.author-list li:nth-child(3)
+		margin 0
+	.author-list li
+		margin-bottom: 5px
+	.author-about
+		padding 20px
+	#author
+		padding 160px 0 30px
+	.contact-footer
+		max-width none
+	.form-title-modal
+		width 82%
+		max-width none
