--- a/_app/styl/thanks.min.styl
+++ b/_app/styl/thanks.min.styl
@@ -6,6 +6,8 @@
 
 @import 'base/2-header'
 
+body
+	background-color: #19789F
 #main
 	padding 0 0 60px
 	color #fff
@@ -14,7 +16,7 @@
 	background-repeat no-repeat
 	background-position: center
 	background-size: cover
-	min-height calc(100vh - 225px)
+	min-height calc(100vh - 222px)
 .main-title
 	font-size: 32px
 	font-family: Gd
@@ -44,4 +46,90 @@
 	width 70px
 
 @import 'base/3-footer'
-@import 'main/8-medias'
+
+@media screen and (min-width 2295px)
+	body
+		font-size: 18px
+	.container
+		width 1400px
+	header
+		margin-bottom: 100px
+@media screen and (max-width 767px)
+	#main
+		text-align center
+		padding 0 0 40px
+		min-height calc(100vh - 206px)
+	header
+		margin-bottom: 15px
+	.header-logo
+		float: none
+		display block
+		margin 0 auto 5px
+	.contacts
+		float: none
+		padding 0
+		text-align center
+	.contact
+		display inline-block
+		text-align: left
+	.main-title
+		font-size: 28px
+		span
+			font-size: 30px
+	.main-text
+		font-size: 22px
+	.mails
+		margin 0 auto
+	footer
+		padding 40px 0 30px
+	.contact-footer
+		display block
+		width 100%
+		max-width 260px
+		margin 0 auto 10px
+@media screen and (max-width 560px)
+	#main
+		min-height calc(100vh - 169px)
+	.header-logo
+		width 100px
+	.contact
+		font-size: 12px
+		span
+			font-size: 10px
+	.contact-adress span:last-of-type
+		font-size: 12px
+	.main-title
+		font-size: 24px
+		span
+			font-size: 28px
+	.main-text
+		font-size: 20px
+		margin 20px 0 30px
+	footer
+		padding 20px 0
+	.contact-footer
+		max-width none
+@media screen and (max-width 380px)
+	.contact
+		display block
+		width 100%
+		max-width 150px
+		margin 0 auto 5px
+	.main-title
+		font-size: 22px
+		span
+			font-size: 24px
+	.main-text
+		font-size: 18px
+		margin 10px 0 20px
+	.mails
+		display block
+		text-align center
+		// flex-wrap: wrap
+		// justify-content: space-between
+		padding 20px 20px 0
+	.email-link
+		display inline-block
+		margin 0 20px 20px
+	.contact-footer
+		max-width none
